fix: 添加overflow处理 # Reviewed, transaction id: 38444

--- a/bkmonitor/webpack/src/monitor-pc/pages/custom-escalation/custom-escalation-detail/metric-table-slide.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/custom-escalation/custom-escalation-detail/metric-table-slide.scss
@@ -1,3 +1,9 @@
+@mixin text-x-ellipsis {
+  overflow-x: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 .metric-slider-box {
   .metric-slider-content {
     padding: 22px 24px;
@@ -130,6 +136,7 @@
             border: 1px solid #3a84ff;
           }
           input {
+            @include text-x-ellipsis();
             width: 100%;
             height: 37px;
             border: none;
